[package]
name = "acticrds"
version = "0.1.0"
edition = "2021"
description = "Custom Kubernetes resources for the ActiK8s project"
readme = "README.md"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "^1.20", features = ["macros", "rt-multi-thread"] }
kube = { version = "^0.74", default-features = true, features = ["derive"] }
kube-derive = "^0.74"
#kube-runtime = "^0.74"
#k8s-openapi = { version = "^0.15", default-features = false, features = ["v1_24"] }
k8s-openapi = { version = "^0.15", default-features = false, features = ["v1_21"] }
#futures = "^0.3"
serde = "1"
serde_json = "1"
schemars = "^0.8"
#thiserror = "~1"
validator = { version = "0.15", features = ["derive"] }

[dev-dependencies]
anyhow = "~1"
serde_yaml = "~0.8"
