[package]
name = "registrant"
version = "0.1.0"
edition = "2021"
description = "Detects hardware topology and registers a new ActiNode"
readme = "README.md"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
license = "Apache-2.0"
rust-version = "1.62"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actitopo = { version = "0.1.0", path = "../actitopo" }
acticrds = { version = "0.1.0", path = "../acticrds" }
anyhow = "~1"
clap = { version = "~3.2", features = ["cargo", "derive"] }
futures = "0.3"
immutree = { version = "0.1.0", path = "../immutree" }
#k8s-openapi = { version = "^0.15", default-features = false, features = ["v1_24"] }
k8s-openapi = { version = "^0.15", default-features = false, features = ["v1_21"] }
kube = { version = "^0.74", default-features = true, features = ["derive"] }
kube-derive = "^0.74"
kube-runtime = "^0.74"
serde = "1"
serde_json = "1"
schemars = "^0.8"
#hwloc2 = { git = "https://github.com/ckatsak/libhwloc2-rs", rev = "fff737d8" }
tokio = { version = "^1.20", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.15", features = ["derive"] }

[dev-dependencies]
#serde_yaml = "~0.8"
